--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,11 +2,11 @@
 name = "suna"
 version = "1.0"
 description = "open source generalist AI Agent"
-authors = ["marko-kraemer <mail@markokraemer.com>"]
+authors = ["VMG <vgil@soapbox.net>"]
 readme = "README.md"
 license = "MIT"
-homepage = "https://www.suna.so/"
-repository = "https://github.com/kortix-ai/suna"
+homepage = "https://www.bitterbot.net/"
+repository = "https://github.com/VGIL77/Bitterbot-Core"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
