--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   api:
-    image: ghcr.io/suna-ai/suna-backend:latest
+    image: ghcr.io/bitterbot.net/bitterbot-core:latest
     build:
       context: .
       dockerfile: Dockerfile
@@ -32,7 +32,7 @@ services:
         max-size: "10m"
         max-file: "3"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
+      test: ["CMD", "curl", "-f", "https://bitterbot-core-production.up.railway.app/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
