Add GitHub integration with viewer

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -40,6 +40,9 @@ TAVILY_API_KEY=
 FIRECRAWL_API_KEY=
 FIRECRAWL_URL=
 
+# GitHub access token
+GITHUB_TOKEN=
+
 # Sandbox container provider:
 DAYTONA_API_KEY=
 DAYTONA_SERVER_URL=
